apps/appiecal-schedule/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appiecal-schedule
  namespace: default
  annotations:
    secrets.phase.dev/redeploy: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appiecal-schedule
  template:
    metadata:
      labels:
        app: appiecal-schedule
    spec:
      containers:
        - name: appiecal-schedule
          image: ghcr.io/ijskoud/appiecal-schedule@sha256:1045a93158dd2eb6a10b43eb5c789a038bbaea9797225af9c9387b382c2db37b
          ports:
            - containerPort: 8080
