apps/appiecal-schedule/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appiecal-schedule
  namespace: default
spec:
  selector:
    app: appiecal-schedule
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
